# mango

./: .gitignore  README.md  pyproject.toml  test.py  train.py
configs/: test_config.yaml  training_config.yaml
configs/algorithm/: dummy_mango.yaml  ltsgns_v2.yaml  ltsgns_v2_regression.yaml  ltsgns_v2_training_mat_prop.yaml  ltsgns_v2_two_stages.yaml  mango_regression.yaml  mango_training_mat_prop.yaml  mango_two_stages.yaml  no_ml_mgn.yaml  no_ml_mgn_torch_geometric.yaml  stamp_forming_mgn.yaml
configs/dataset/: dp_easy_v5.yaml  dp_easy_v5_ood.yaml  dp_hard_v5.yaml  dp_hard_v5_ood.yaml  planar_bending_hard_v1.yaml  planar_bending_v3.yaml  sphere_cloth_v3.yaml  step_ml_dp_easy_v5.yaml  step_ml_dp_easy_v5_ood.yaml  step_ml_dp_hard_v5.yaml  step_ml_dp_hard_v5_ood.yaml  step_ml_planar_bending_hard_v1.yaml  step_ml_planar_bending_v3.yaml  step_sphere_cloth_v3.yaml
configs/loading/: base_loading.yaml  no_loading.yaml
configs/logger/: standard_wandb.yaml
configs/platform/: big_kluster.yaml  bwuni3.yaml  bwuni3_short.yaml  horeka_dev_gpu_single.yaml  horeka_gpu_philipp.yaml  kluster.yaml
configs/trainer/: single_cpu_standard.yaml  single_gpu_grad_clip_full_prec.yaml  single_gpu_standard.yaml
docs/: index.html
scripts/: checkpoint_scraping.sh
scripts/paraview_vis/: pip_freeze.py  post_process_vis_and_show.py  post_process_vis_and_show_evaluate.py  show_context.py
scripts/plotting/: all_tasks_oracle_plot.py  plotting.py
scripts/preprocess/: deformable_plate_hdf5_conversion.py  planar_bending_hdf5_conversion.py  sphere_cloth_hdf5_conversion.py
(+282 files in other folders)
